Appel à l'API : Ok | HTML: pas encore au point

--- a/src/app/users/volunteer/volunteer.component.html
+++ b/src/app/users/volunteer/volunteer.component.html
@@ -1,1 +1,21 @@
 <p>volunteer works!</p>
+
+<div class="container">
+  <div class="card shadow mb-4">
+    <div class="card-body">
+      <table class="table table-striped">
+        <thead>
+        <tr> <th>Id</th><th>Mail</th> <th>Password</th> <th>type</th> </tr>
+        </thead>
+        <tbody *ngFor="let volunteer of volunteers">
+        <tr >
+          <td>{{volunteer.id}}</td>
+          <td>{{volunteer.mail}}</td>
+          <td>{{volunteer.password}}</td>
+          <td>{{volunteer.type}}</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
