--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html >
 <head>
@@ -19,10 +18,6 @@
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
         Volontaires
       </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" routerLink = "add-produit">Ajouter</a>
-        <a class="dropdown-item" href="#">Lister</a>
-      </div>
     </li>
   </ul>
   <ul class="navbar-nav ml-auto" >
@@ -31,8 +26,8 @@
         [username]
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">login</a>
-        <a class="dropdown-item" href="#">logout</a>
+        <a class="dropdown-item" href="http://localhost:4200/inscription">S'inscrire</a>
+        <a class="dropdown-item" href="#">Se Connecter</a>
         <a class="dropdown-item" href="#">Profile</a>
       </div>
     </li>
