--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,12 @@
 <html >
 <head>
   <meta charset="utf-8">
-  <title>Human Helper</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <title>Gestion des Volontaires</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Human Helper</a>
+  <a class="navbar-brand" href="#">Gestion Volontaires</a>
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
@@ -24,7 +23,7 @@
   <ul class="navbar-nav ml-auto" >
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        Profil
+        [username]
       </a>
       <div class="dropdown-menu">
         <a class="dropdown-item" href="http://localhost:4200/inscription">S'inscrire</a>
@@ -34,21 +33,7 @@
     </li>
   </ul>
 </nav>
-  <ul class="list-group">
-    <li class="list-group-item"><a href="http://localhost:4200/camp/report">Signaler un nouveau camp</a></li>
-    <li class="list-group-item"><a routerLink="#" >Home</a></li>
-    <li class="list-group-item"><a href="volunteer" id="navbardrop" data-toggle="dropdown">Volontaires</a></li>
-    <li class="list-group-item"><a routerLink = "add-produit">Ajouter</a></li>
-    <li class="list-group-item"><a href="#">Lister</a></li>
-  </ul>
-  <ul>
-    <li><a href="#">login</a></li>
-    <li><a href="#">logout</a></li>
-    <li><a href="#">Profile</a></li>
-  </ul>
-  <router-outlet></router-outlet>
-
 </body>
 </html>
 
-
+<router-outlet></router-outlet>
