Add all useful services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
 <html >
 <head>
   <meta charset="utf-8">
-  <title>Gestion des Volontaires</title>
+  <title>Home</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Gestion Volontaires</a>
+  <a class="navbar-brand" href="#">Human-Helper</a>
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
