--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,37 +3,88 @@
 <head>
   <meta charset="utf-8">
   <title>Home</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <!-- Brand -->
-  <a class="navbar-brand" href="#">Human-Helper</a>
-  <!-- Links -->
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/produits" >Home</a>
-    </li>
-    <!-- Dropdown -->
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        Volontaires
-      </a>
-    </li>
-  </ul>
-  <ul class="navbar-nav ml-auto" >
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        [username]
-      </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="http://localhost:4200/inscription">S'inscrire</a>
-        <a class="dropdown-item" href="#">Se Connecter</a>
-        <a class="dropdown-item" href="#">Profile</a>
-      </div>
-    </li>
-  </ul>
-</nav>
+
+<div class="navbar navbar-expand-lg navbar-dark bg-dark">
+<ul ngbNav #nav="ngbNav" [activeId]="2" class="dropdownMenuButton2">
+  <li ngbDropdown><a class="navbar-brand" href="#">Human-Helper</a></li>
+
+  <li ngbDropdown class="nav-item">
+    <a href (click)="false" class="nav-link" ngbDropdownToggle>association</a>
+    <div ngbDropdownMenu>
+      <button routerLink="association/connection" class="dropdown-item" ngbDropdownItem>Connection</button>
+      <button routerLink="association/inscription" class="dropdown-item" ngbDropdownItem>inscription</button>
+      <div class="dropdown-divider"></div>
+      <button routerLink="associations" class="dropdown-item" ngbDropdownItem>Liste</button>
+    </div>
+  </li>
+
+  <li ngbDropdown class="nav-item">
+    <a href (click)="false" class="nav-link" ngbDropdownToggle>Volontaires</a>
+    <div ngbDropdownMenu>
+      <button routerLink="volunteer/connection" ngbDropdownItem>Connection</button>
+      <button routerLink="volunteer/inscription" ngbDropdownItem>Inscription</button>
+      <div class="dropdown-divider"></div>
+      <button routerLink="volunteer" ngbDropdownItem>Liste</button>
+    </div>
+  </li>
+
+  <li ngbDropdown class="nav-item">
+    <a href (click)="false" class="nav-link" ngbDropdownToggle>Camp</a>
+    <div ngbDropdownMenu>
+      <button routerLink="camp/report" ngbDropdownItem>report camp</button>
+    </div>
+
+  </li><li ngbDropdown class="nav-item">
+    <a href (click)="false" class="nav-link" ngbDropdownToggle>Médicaments</a>
+    <div ngbDropdownMenu>
+      <button routerLink="donation/medicament" ngbDropdownItem>Donner</button>
+    </div>
+  </li>
+
+
+</ul>
+</div>
+
+<router-outlet></router-outlet>
+<div [ngbNavOutlet]="nav" class="mt-2"></div>
+
+<!--<nav class="navbar navbar-expand-sm bg-dark navbar-dark">-->
+<!--  &lt;!&ndash; Brand &ndash;&gt;-->
+<!--  <a class="navbar-brand" href="#">Human-Helper</a>-->
+<!--  &lt;!&ndash; Links &ndash;&gt;-->
+<!--  <ul class="navbar-nav">-->
+<!--    <li class="nav-item">-->
+<!--      <a class="nav-link" routerLink="#" >-->
+<!--        test-->
+<!--      </a>-->
+<!--    </li>-->
+<!--    &lt;!&ndash; Dropdown &ndash;&gt;-->
+<!--    <li class="nav-item dropdown">-->
+<!--      <a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown" routerLink="volunteer">-->
+<!--        Volontaires-->
+<!--      </a>-->
+<!--    </li>-->
+<!--  </ul>-->
+<!--  <ul class="navbar-nav ml-auto" >-->
+<!--    <li class="nav-item dropdown">-->
+<!--      <a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">-->
+<!--        [username]-->
+<!--      </a>-->
+<!--      <div class="dropdown-menu">-->
+<!--        <a class="dropdown-item" href="http://localhost:4200/inscription">S'inscrire</a>-->
+<!--        <a class="dropdown-item" href="#">Se Connecter</a>-->
+<!--        <a class="dropdown-item" href="#">Profile</a>-->
+<!--      </div>-->
+<!--    </li>-->
+<!--  </ul>-->
+<!--</nav>-->
+
+
+
 </body>
 </html>
 
-<router-outlet></router-outlet>
+
