--- a/src/app/users/volunteer-connection/volunteer-connection.component.html
+++ b/src/app/users/volunteer-connection/volunteer-connection.component.html
@@ -1,13 +1,29 @@
-<p>Connexion Volontaire</p>
+<form class="container">
 
-<form>
-  <div class="form-group">
-    <label>Nom: </label>
-    <input type="text" name="name" class="form-control" [(ngModel)]="volunteer.name">
+  <div class="form-control text-center">
+    <p>Connexion Volontaires</p>
   </div>
-  <div class="form-group">
-    <label>Mot de Passe: </label>
-    <input type="text" name="password" class="form-control" [(ngModel)]="volunteer.password">
+
+  <br>
+
+  <div class="row justify-content-md-center">
+
+    <div class="col-md-4">
+      <label class="sr-only" for="name">Name</label>
+      <input type="text" class="form-control mb-2" id="name" placeholder="Nom" name="name" [(ngModel)]="volunteer.name">
+    </div>
+
+
+    <div class="col-md-4">
+      <label class="sr-only" for="password">Nom</label>
+      <input type="password" class="form-control" id="password" placeholder="Password" name="password" [(ngModel)]="volunteer.password">
+    </div>
+
+
+    <div class="col-md-2">
+      <button type="submit" class="btn btn-primary mb-2" (click)="connection()">Connexion</button>
+    </div>
+
   </div>
-  <button type="button" (click)="connection()" class="btn bnt-success">Se Connecter</button>
+
 </form>
