--- a/src/app/add-food/add-food.component.html
+++ b/src/app/add-food/add-food.component.html
@@ -1,23 +1,62 @@
-<p>add-food works!</p>
+<!--<p>add-food works!</p>-->
 
-<form method="post">
-  <div class="form-group">
-    <router-outlet></router-outlet>
-    <label>Type de nouritures: </label>
-    <select [(ngModel)]="foodType" [ngModelOptions]="{standalone: true}">
-      <option *ngFor="let typeFood of typesFood" [ngValue]="typeFood.id" [(ngModel)]="foodType" [ngModelOptions]="{standalone: true}">
-        {{typeFood.type}}
-      </option>
-    </select>
+<!--<form method="post">-->
+<!--  <div class="form-group">-->
+<!--    <router-outlet></router-outlet>-->
+<!--    <label>Type de nouritures: </label>-->
+<!--    <select [(ngModel)]="foodType" [ngModelOptions]="{standalone: true}">-->
+<!--      <option *ngFor="let typeFood of typesFood" [ngValue]="typeFood.id" [(ngModel)]="foodType" [ngModelOptions]="{standalone: true}">-->
+<!--        {{typeFood.type}}-->
+<!--      </option>-->
+<!--    </select>-->
+<!--  </div>-->
+<!--  <div class="form-group">-->
+<!--    <label>Nom: </label>-->
+<!--    <input type="text" name="name" class="form-control" [(ngModel)]="food.name">-->
+<!--  </div>-->
+<!--  <div class="form-group">-->
+<!--    <label>Date de péremption: </label>-->
+<!--    <input type="date" class="form-control" [(ngModel)]="food.expirationDate">-->
+<!--  </div>-->
+<!--  <button type="button" (click)="addFood()" class="btn bnt-success">Ajouter</button>-->
+<!--</form>-->
+
+<form class="container">
+  <div class="row">
+    <div class="form-control text-center col-md-12">
+      <p> Ajout de médicament</p>
+    </div>
+
+    <div class="row justify-content-md-center">
+      <div class="col-md-6">
+        <label for="name">Name : </label>
+        <input type="text" name="name" id="name" class="form-control" [(ngModel)]="food.name">
+      </div>
+    </div>
+
+    <div class="row justify-content-md-center">
+      <div class="col-md-6">
+        <label for="expirationDate">Date de péremption: </label>
+        <input type="date" id="expirationDate" name="expirationDate" class="form-control" [(ngModel)]="food.expirationDate">
+      </div>
+    </div>
+
+    <div class="row justify-content-md-center">
+      <div class="col-md-6">
+        <label>Type de nouritures: </label>
+        <select [(ngModel)]="foodType" [ngModelOptions]="{standalone: true}">
+          <option readonly="" selected>-- Choisir --</option>
+          <option async *ngFor="let typeFood of typesFood" [(ngModel)]="foodType.id" [ngModelOptions]="{standalone: true}">
+            {{typeFood.type}}
+          </option>
+        </select>
+      </div>
+    </div>
+
+    <div class="row justify-content-md-center">
+      <label></label>
+      <button type="button" (click)="addFood()" class="btn btn-primary mb-2 col-md-2">Ajouter</button>
+    </div>
+
   </div>
-  <div class="form-group">
-    <label>Nom: </label>
-    <input type="text" name="name" class="form-control" [(ngModel)]="food.name">
-  </div>
-  <div class="form-group">
-    <label>Date de péremption: </label>
-    <input type="date" class="form-control" [(ngModel)]="food.expirationDate">
-  </div>
-  <button type="button" (click)="addFood()" class="btn bnt-success">Ajouter</button>
 </form>
-
