--- a/src/app/medicament/medicament.component.html
+++ b/src/app/medicament/medicament.component.html
@@ -1,3 +1,4 @@
+<!--
 <p>Ajout Médicament</p>
 
 <form>
@@ -11,5 +12,32 @@
   </div>
   <button type="button" (click)="addMedicament()" class="btn bnt-success">Ajouter au stock</button>
 </form>
+-->
 
+<form class="container">
+  <div class="row">
+    <div class="form-control text-center col-md-12">
+      <p> Ajout de médicament</p>
+    </div>
 
+    <div class="row justify-content-md-center">
+      <div class="col-md-6">
+        <label for="name">Name : </label>
+        <input type="text" name="name" id="name" class="form-control" [(ngModel)]="medicament.name">
+      </div>
+    </div>
+
+    <div class="row justify-content-md-center">
+      <div class="col-md-6">
+        <label for="expirationDate">Date de péremption: </label>
+        <input type="date" id="expirationDate" name="expirationDate" class="form-control" [(ngModel)]="medicament.expirationDate">
+      </div>
+    </div>
+
+    <div class="row justify-content-md-center">
+      <label></label>
+      <button type="button" (click)="addMedicament()" class="btn btn-primary mb-2 col-md-2">Ajouter au stock</button>
+    </div>
+
+  </div>
+</form>
