--- a/src/app/users/association/association.component.html
+++ b/src/app/users/association/association.component.html
@@ -3,7 +3,7 @@
     <div class="card-body">
       <table class="table table-striped">
         <thead>
-        <tr> <th>Id</th><th>Nom</th> <th>Prix</th> <th>mail</th> </tr>
+        <tr> <th>Id</th><th>Nom</th> <th>Cagnotte</th> <th>mail</th> </tr>
         </thead>
         <tbody *ngFor="let association of associations">
         <tr >
