Volunteer Camp and Medicament are fully functional (CRUD)

--- a/src/app/add-food/add-food.component.html
+++ b/src/app/add-food/add-food.component.html
@@ -1,30 +1,7 @@
-<!--<p>add-food works!</p>-->
-
-<!--<form method="post">-->
-<!--  <div class="form-group">-->
-<!--    <router-outlet></router-outlet>-->
-<!--    <label>Type de nouritures: </label>-->
-<!--    <select [(ngModel)]="foodType" [ngModelOptions]="{standalone: true}">-->
-<!--      <option *ngFor="let typeFood of typesFood" [ngValue]="typeFood.id" [(ngModel)]="foodType" [ngModelOptions]="{standalone: true}">-->
-<!--        {{typeFood.type}}-->
-<!--      </option>-->
-<!--    </select>-->
-<!--  </div>-->
-<!--  <div class="form-group">-->
-<!--    <label>Nom: </label>-->
-<!--    <input type="text" name="name" class="form-control" [(ngModel)]="food.name">-->
-<!--  </div>-->
-<!--  <div class="form-group">-->
-<!--    <label>Date de péremption: </label>-->
-<!--    <input type="date" class="form-control" [(ngModel)]="food.expirationDate">-->
-<!--  </div>-->
-<!--  <button type="button" (click)="addFood()" class="btn bnt-success">Ajouter</button>-->
-<!--</form>-->
-
 <form class="container">
   <div class="row">
     <div class="form-control text-center col-md-12">
-      <p> Ajout de médicament</p>
+      <p> Ajout de Nourriture</p>
     </div>
 
     <div class="row justify-content-md-center">
