Add Statistics component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,6 +65,10 @@
     </div>
   </li>
 
+  <li ngbDropdown class="nav-item">
+    <a href (click)="false" routerLink="statistics" class="nav-link" ngbDropdownToggle>Statistiques</a>
+  </li>
+
 
 </ul>
 </div>
