Add update/delete  cloth and food

--- a/src/app/cloth/cloth.component.html
+++ b/src/app/cloth/cloth.component.html
@@ -11,6 +11,8 @@
           <td>{{cloth.name}}</td>
           <td>{{cloth.size}}</td>
           <td>{{cloth.gender}}</td>
+          <td> <button type="button" (click)="goToClothUpdateForm(cloth.id)">Mettre à jour</button> </td>
+          <td> <button type="button" (click)="deleteClothById(cloth.id)">Supprimer</button> </td>
         </tr>
         </tbody>
       </table>
