--- a/src/app/camp/camp.component.html
+++ b/src/app/camp/camp.component.html
@@ -3,7 +3,7 @@
     <div class="card-body">
       <table class="table table-striped">
         <thead>
-        <tr> <th>Id</th><th>Nombre de personne</th> <th>Ville</th> <th>Adresse</th> <th>Code Postal</th> </tr>
+        <tr> <th>Id</th><th>Nombre de personne</th> <th>Ville</th> <th>Adresse</th> <th>Code Postal</th><th></th><th></th> </tr>
         </thead>
           <tbody *ngFor="let camp of camps">
           <tr>
