--- a/src/app/medicament/medicament.component.html
+++ b/src/app/medicament/medicament.component.html
@@ -3,7 +3,7 @@
     <div class="card-body">
       <table class="table table-striped">
         <thead>
-        <tr> <th>Id</th><th>Nom</th> <th>Date de péremption</th> </tr>
+        <tr> <th>Id</th><th>Nom</th> <th>Date de péremption</th> <th></th><th></th></tr>
         </thead>
         <tbody *ngFor="let medicament of medicaments">
         <tr>
