--- a/src/app/users/volunteer-inscription/volunteer-inscription.component.html
+++ b/src/app/users/volunteer-inscription/volunteer-inscription.component.html
@@ -28,8 +28,8 @@
 
     <div class="row justify-content-md-center">
       <div class="col-md-6">
-<!--        <label for="type">Type : </label>-->
-        <input type="hidden" id="type" name="type" value=" " class="form-control" [(ngModel)]="volunteer.type">
+        <label for="type">Type : </label>
+        <input type="text" id="type" name="type" value=" " class="form-control" [(ngModel)]="volunteer.type">
       </div>
     </div>
 
