correction logout et front liste

--- a/src/app/cloth/cloth.component.html
+++ b/src/app/cloth/cloth.component.html
@@ -3,7 +3,7 @@
     <div class="card-body">
       <table class="table table-striped">
         <thead>
-        <tr> <th>Id</th><th>Nom</th> <th>Taille</th> <th>Genre</th> </tr>
+        <tr> <th>Id</th><th>Nom</th> <th>Taille</th> <th>Genre</th> <th></th><th></th></tr>
         </thead>
         <tbody *ngFor="let cloth of cloths">
         <tr>
