--- a/src/app/food/food.component.html
+++ b/src/app/food/food.component.html
@@ -3,7 +3,7 @@
     <div class="card-body">
       <table class="table table-striped">
         <thead>
-        <tr> <th>Id</th><th>Nom</th> <th>Type</th> <th>Date de péremtpion</th> </tr>
+        <tr> <th>Id</th><th>Nom</th> <th>Type</th> <th>Date de péremtpion</th> <th></th><th></th></tr>
         </thead>
         <tbody *ngFor="let food of foods">
         <tr>
