--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,7 +42,7 @@
   </li><li ngbDropdown class="nav-item">
     <a href (click)="false" class="nav-link" ngbDropdownToggle>Médicaments</a>
     <div ngbDropdownMenu>
-      <button routerLink="donation/medicament" ngbDropdownItem>Donner</button>
+      <button routerLink="medicament/add" ngbDropdownItem>Donner</button>
       <div class="dropdown-divider"></div>
       <button routerLink="medicaments" class="dropdown-item" ngbDropdownItem>Liste</button>
     </div>
@@ -50,7 +50,7 @@
   <li ngbDropdown class="nav-item">
     <a href (click)="false" class="nav-link" ngbDropdownToggle>Nourriture</a>
     <div ngbDropdownMenu>
-      <button routerLink="donation/food" ngbDropdownItem>Donner</button>
+      <button routerLink="food/add" ngbDropdownItem>Donner</button>
       <div class="dropdown-divider"></div>
       <button routerLink="foods" class="dropdown-item" ngbDropdownItem>Liste</button>
     </div>
