--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,6 +62,15 @@
     <a href (click)="false" routerLink="statistics" class="nav-link" ngbDropdownToggle>Statistiques</a>
   </li>
 
+  <li ngbDropdown class="nav-item">
+    <a href (click)="false" class="nav-link" ngbDropdownToggle>Besoins (à coder)</a>
+    <div ngbDropdownMenu>
+      <button routerLink="" class="dropdown-item" ngbDropdownItem>Par Camp</button>
+      <div class="dropdown-divider"></div>
+      <button routerLink="" class="dropdown-item" ngbDropdownItem>Pour l'association</button>
+    </div>
+  </li>
+
 </ng-template>
 
 </ul>
@@ -71,7 +80,6 @@
 </div>
 <br>
 <router-outlet></router-outlet>
-<!--<div [ngbNavOutlet]="nav" class="mt-2"></div>-->
 
 
 </body>
