--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
     <a href (click)="false" class="nav-link" ngbDropdownToggle>Association</a>
     <div ngbDropdownMenu>
       <button routerLink="association/connection" class="dropdown-item" ngbDropdownItem>Connexion</button>
-      <button routerLink="association/inscription" class="dropdown-item" ngbDropdownItem>inscription</button>
+      <button routerLink="association/inscription" class="dropdown-item" ngbDropdownItem>Inscription</button>
       <div class="dropdown-divider"></div>
       <button routerLink="associations" class="dropdown-item" ngbDropdownItem>Liste</button>
     </div>
@@ -26,7 +26,7 @@
   <li  ngbDropdown class="nav-item">
     <a href (click)="false" class="nav-link" ngbDropdownToggle>Camp</a>
     <div ngbDropdownMenu>
-      <button routerLink="camp/report" ngbDropdownItem>report camp</button>
+      <button routerLink="camp/report" ngbDropdownItem>Signaler un nouveau camp</button>
       <div class="dropdown-divider"></div>
       <button routerLink="camps" class="dropdown-item" ngbDropdownItem>Liste</button>
     </div>
@@ -35,7 +35,7 @@
   <li ngbDropdown class="nav-item">
     <a href (click)="false" class="nav-link" ngbDropdownToggle>Médicaments</a>
     <div ngbDropdownMenu>
-      <button routerLink="medicament/add" ngbDropdownItem>Donner</button>
+      <button routerLink="medicament/add" ngbDropdownItem>Ajouter</button>
       <div class="dropdown-divider"></div>
       <button routerLink="medicaments" class="dropdown-item" ngbDropdownItem>Liste</button>
     </div>
@@ -43,7 +43,7 @@
   <li ngbDropdown class="nav-item">
     <a href (click)="false" class="nav-link" ngbDropdownToggle>Nourriture</a>
     <div ngbDropdownMenu>
-      <button routerLink="food/add" ngbDropdownItem>Donner</button>
+      <button routerLink="food/add" ngbDropdownItem>Ajouter</button>
       <div class="dropdown-divider"></div>
       <button routerLink="foods" class="dropdown-item" ngbDropdownItem>Liste</button>
     </div>
